# simple-text-replacer

./: LICENSE.txt  README.md  pyproject.toml  sandbox.py
docs/: README_JP.md  coding_rule.md
src/: main.py
src/module1/: __init__.py  class1.py
src/simrep/: __init__.py  cli.py
tests/integration/: README.md
tests/unit/: pytest_light_template.py
tests/unit/case00/: README.md  my_after_pets.txt  my_before_pets.txt  replacer.json
tests/unit/case01/: README.md  replacer.yaml
tests/unit/case02/: README.md  after.yaml  before.yaml  replacer.json  replacer.yaml
tests/unit/case03/: README.md  replacer.yaml
tests/unit/case03/after/: child03.yaml
tests/unit/case03/after/child01/: child01_01.yaml
tests/unit/case03/after/child02/: child02_01.yaml
tests/unit/case03/before/: child03.yaml
tests/unit/case03/before/child01/: child01_01.yaml
tests/unit/case04/: README.md
tests/unit/case04/before_copy/child02/: child02_01.yaml
tests/unit/module1/: exception_template.py  sandbox.py  test.py
