[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-text-replacer"
version = "0.1.0"
authors = [
  { name="masaniki", email="masaniki.software@gmail.com },
]
description = "simple text replacing CLI application."
dependencies = ["PyYAML]
readme = "README.md"
requires-python = ">=3.9"
classifiers = <
    @Summ:PyPIが定める分類名,
    @Type:Enum型List,
    @Disc:"https://pypi.org/classifiers/"
  >
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = <
    @Summ: PyPI上の検索に引っかかるためのkeyword.
    @Type: String型Lsit
  >

[project.scripts]
text-replace = "main:mainCLI"

[project.urls]
Repository = <
    @Summ: source codeの公開場所,
    @Type: URL
    @Feat: 主にgithub
  >
Documentation = <
    @Summ: documetの場所,
    @Type: URL
    @Feat: 主にgithub
  >
Issues = <
    @Summ: 問題点を指摘する場所,
    @Type: URL,
    @Feat: 主にgithub
  >
