[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-text-replacer"
version = "0.1.0"
authors = [
  { name="masaniki", email="masaniki.software@gmail.com },
]
description = "This provides text replacement by YAML or JSON format."
dependencies = ["PyYAML]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Programming Language :: Python :: 3.9",
  "Topic :: Text Processing"
]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["text", "CLI"]

[project.scripts]
simrep = "main:mainCLI"

[project.urls]
Repository = <
    @Summ: source codeの公開場所,
    @Type: URL
    @Feat: 主にgithub
  >
Documentation = <
    @Summ: documetの場所,
    @Type: URL
    @Feat: 主にgithub
  >
Issues = <
    @Summ: 問題点を指摘する場所,
    @Type: URL,
    @Feat: 主にgithub
  >
