[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-text-replacer"
version = "1.0.1"
authors = [
  { name="masaniki", email="masaniki.software@gmail.com" },
]
description = "This provides text replacement by YAML or JSON format."
dependencies = ["PyYAML"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3.9",
  "Topic :: Text Processing",
  "Natural Language :: Japanese",
  "Natural Language :: English"
]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["text", "CLI"]

[project.scripts]
simrep = "simrep:main"

[project.urls]
Repository = "https://github.com/masaniki/simple-text-replacer"
Documentation = "https://github.com/masaniki/simple-text-replacer/blob/master/README.md"
Issues = "https://github.com/masaniki/simple-text-replacer/issues"
